fixed scroll overflow and text size

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+    margin: 0; /* Ensure no margin */
+    height: 100%; /* Allow full height */
+    background-color: #1d3557; /* Set to your dark background */
+}
+
+@layer base {
+h1 {
+    @apply text-light-mid m-10 text-3xl sm:text-5xl md:text-6xl;
+
+}
+h2 {
+    @apply text-xl;
+}
+}
